# uncertainty-llms-75dc-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
datasets/: .gitignore  dataset_catalog.yaml  download_datasets.py
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/appendix/: full_results.tex
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: medical_question_answering_LLM_hallucination_safety_20260211_172658.jsonl  semantic_uncertainty_conformal_prediction_language_models_20260211_172258.jsonl  uncertainty_estimation_large_language_models_20260211_171350.jsonl
papers/pages/farquhar2024/: farquhar2024_semantic_entropy_manifest.txt
papers/pages/kuhn2023/: kuhn2023_semantic_uncertainty_manifest.txt
papers/pages/ness2024/: ness2024_medfuzz_manifest.txt
papers/pages/wang2024_conu/: wang2024_conu_manifest.txt
papers/pages/wang2024_wse/: wang2024_word_sequence_entropy_manifest.txt
results/: auroc_results.json  config.json  metrics.csv  raw_results.json  samples.json  statistical_tests.json  summary_table.md
src/: analyze.py  experiment.py
(+2 files in other folders)
